.k8s/jira-clone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-clone-app
spec:
  selector:
    matchLabels:
      app: jira-clone-app
  replicas: 2
  template:
    metadata:
      labels:
        app: jira-clone-app
    spec:
      containers:
        - name: jira-clone-app
          image: glocycle/jira-clone:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 3000
