.k8s/serverless-redis-http-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upstash-redis
  labels:
    app: upstash-redis
spec:
  selector:
    matchLabels:
      app: upstash-redis
  template:
    metadata:
      labels:
        app: upstash-redis
    spec:
      containers:
      - name: upstash-redis
        image: hiett/serverless-redis-http:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
      - name: redis
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
