.k8s/jira-clone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-clone-app-service
spec:
  selector:
    app: jira-clone-app
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
