.k8s/postgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-db
  name: postgres-db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
