.k8s/serverless-redis-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upstash-redis
spec:
  selector:
    app: upstash-redis
  ports:
  - port: 80  
    targetPort: 80
